--- a/speech_to_text.ipynb
+++ b/speech_to_text.ipynb
@@ -15,10 +15,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Required Libraries and Modules\n",
+    "# -------------------------------------\n",
+    "# typing: Provides type hints for function parameters and return values\n",
+    "# os: Operating system interface for file path operations\n",
+    "# glob: Unix-style pathname pattern expansion for finding audio files\n",
+    "# pandas: Data manipulation and analysis library for storing transcription results\n",
+    "# numpy: Numerical computing library for handling audio data arrays\n",
+    "# librosa: Audio processing library for loading and preprocessing audio files\n",
+    "# torch: PyTorch deep learning framework for running neural network models\n",
+    "# transformers: HuggingFace library providing pre-trained speech recognition models\n",
+    "\n",
     "from typing import List, Tuple\n",
     "import os\n",
     "import glob\n",
@@ -27,10 +38,10 @@
     "import librosa\n",
     "import torch\n",
     "from transformers import (\n",
-    "    Wav2Vec2ForCTC, \n",
-    "    Wav2Vec2Processor,\n",
-    "    WhisperProcessor, \n",
-    "    WhisperForConditionalGeneration\n",
+    "    Wav2Vec2ForCTC,  # Facebook's Wav2Vec2 model for speech recognition\n",
+    "    Wav2Vec2Processor,  # Preprocessor for Wav2Vec2 model input/output\n",
+    "    WhisperProcessor,  # Preprocessor for Whisper model input/output\n",
+    "    WhisperForConditionalGeneration  # OpenAI's Whisper model for speech recognition\n",
     ")\n",
     "\n",
     "def validate_speech_samples_path(path: str) -> str:\n",
