omit redundant section

--- a/speech_to_text.ipynb
+++ b/speech_to_text.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Speech to Text\n",
     "\n",
-    "Converting speech to text is a powerful tool in higher education, making spoken content accessible and analyzable. This technology enables automatic transcription of lecture recordings, creates real-time captions for classroom discussions, and helps international students follow along with spoken English. It also supports research by transcribing interviews, focus groups, and oral histories. By converting speech to text, institutions can improve accessibility, support language learners, and create searchable archives of educational content.\n",
-    "\n",
-    "Using models from [HuggingFace](https://huggingface.co/docs), we compare two speech recognition approaches:\n",
+    "Compare performance for two [HuggingFace](https://huggingface.co/docs) models:\n",
     "- [Wav2Vec2](https://huggingface.co/docs/transformers/model_doc/wav2vec2)\n",
     "- [Whisper](https://huggingface.co/openai/whisper-tiny.en)"
    ]
@@ -19,17 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Required Libraries and Modules\n",
-    "# -------------------------------------\n",
-    "# typing: Provides type hints for function parameters and return values\n",
-    "# os: Operating system interface for file path operations\n",
-    "# glob: Unix-style pathname pattern expansion for finding audio files\n",
-    "# pandas: Data manipulation and analysis library for storing transcription results\n",
-    "# numpy: Numerical computing library for handling audio data arrays\n",
-    "# librosa: Audio processing library for loading and preprocessing audio files\n",
-    "# torch: PyTorch deep learning framework for running neural network models\n",
-    "# transformers: HuggingFace library providing pre-trained speech recognition models\n",
-    "\n",
+    "# Import libraries\n",
     "from typing import List, Tuple\n",
     "import os\n",
     "import glob\n",
@@ -46,22 +34,7 @@
     "\n",
     "def validate_speech_samples_path(path: str) -> str:\n",
     "    \"\"\"\n",
-    "    Validate that the speech samples directory exists and contains .wav files.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    path : str\n",
-    "        Path to the speech samples directory\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    str\n",
-    "        Validated path to speech samples directory\n",
-    "        \n",
-    "    Raises:\n",
-    "    -------\n",
-    "    RuntimeError\n",
-    "        If the directory doesn't exist or contains no .wav files\n",
+    "    Confirm the speech samples directory exists and contains .wav files.\n",
     "    \"\"\"\n",
     "    if not os.path.exists(path):\n",
     "        raise RuntimeError(\n",
@@ -95,27 +68,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_audio_file(file_path: str, sample_rate: int = 16000) -> Tuple[np.ndarray, int]:\n",
     "    \"\"\"\n",
-    "    Load and preprocess an audio file for speech-to-text conversion.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    file_path : str\n",
-    "        Path to the audio file to be loaded\n",
-    "    sample_rate : int, optional\n",
-    "        Target sampling rate for the audio, defaults to 16000 Hz\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    Tuple[np.ndarray, int]\n",
-    "        A tuple containing:\n",
-    "        - The loaded audio data as a numpy array\n",
-    "        - The sampling rate used\n",
+    "    Load and process an audio file for speech-to-text conversion.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        audio, rate = librosa.load(file_path, sr=sample_rate)\n",
@@ -126,18 +85,6 @@
     "def get_audio_files(directory: str, extension: str = \"*.wav\") -> List[str]:\n",
     "    \"\"\"\n",
     "    Get a sorted list of audio files from a directory.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    directory : str\n",
-    "        Path to the directory containing audio files\n",
-    "    extension : str, optional\n",
-    "        File extension pattern to match, defaults to \"*.wav\"\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    List[str]\n",
-    "        Sorted list of file paths matching the extension pattern\n",
     "    \"\"\"\n",
     "    try:\n",
     "        return sorted(glob.glob(os.path.join(directory, extension)))\n",
@@ -146,19 +93,8 @@
     "\n",
     "def create_results_dataframe(wav_files: List[str], transcriptions: List[str]) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Create a DataFrame to store speech-to-text results.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    wav_files : List[str]\n",
-    "        List of audio file paths\n",
-    "    transcriptions : List[str]\n",
-    "        List of transcribed text corresponding to the audio files\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    pd.DataFrame\n",
-    "        DataFrame containing wav_input and txt_output columns\n",
+    "    Create a pandas df to store speech-to-text results.\n",
+    "    Include columns for wav_input and txt_output.\n",
     "    \"\"\"\n",
     "    return pd.DataFrame({\n",
     "        'wav_input': wav_files,\n",
@@ -168,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -184,16 +120,6 @@
     "def transcribe_with_wav2vec2(audio_files: List[str]) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Transcribe audio files using the Wav2Vec2 model.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    audio_files : List[str]\n",
-    "        List of paths to audio files to transcribe\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    pd.DataFrame\n",
-    "        DataFrame containing original audio files and their transcriptions\n",
     "    \"\"\"\n",
     "    try:\n",
     "        # Initialize Wav2Vec2 model and processor\n",
@@ -248,23 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def transcribe_with_whisper(audio_files: List[str]) -> pd.DataFrame:\n",
     "    \"\"\"\n",
     "    Transcribe audio files using the OpenAI Whisper model.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    audio_files : List[str]\n",
-    "        List of paths to audio files to transcribe\n",
-    "        \n",
-    "    Returns:\n",
-    "    --------\n",
-    "    pd.DataFrame\n",
-    "        DataFrame containing original audio files and their transcriptions\n",
     "    \"\"\"\n",
     "    try:\n",
     "        # Initialize Whisper model and processor\n",
@@ -327,20 +243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def display_results(df: pd.DataFrame, model_name: str) -> None:\n",
     "    \"\"\"\n",
-    "    Display transcription results in a formatted way.\n",
-    "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    df : pd.DataFrame\n",
-    "        DataFrame containing transcription results\n",
-    "    model_name : str\n",
-    "        Name of the model used for transcription\n",
+    "    Display transcription results to compare models.\n",
     "    \"\"\"\n",
     "    print(f\"\\n{model_name} Results:\")\n",
     "    print(\"-\" * 80)\n",
@@ -420,34 +329,6 @@
    "source": [
     "# Display results for Whisper\n",
     "display_results(df_whisper, \"Whisper\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Conclusion\n",
-    "\n",
-    "The comparison between Whisper and Wav2Vec2 reveals several key advantages of the Whisper model:\n",
-    "\n",
-    "1. Performance\n",
-    "   - Approximately 20% faster transcription speed\n",
-    "   - Potential for further performance optimization\n",
-    "\n",
-    "2. Accuracy\n",
-    "   - Better handling of singular/plural forms (e.g., \"apple\" vs. \"apples\")\n",
-    "   - More accurate spelling (e.g., \"doggies\" vs. \"DOGGIYS\")\n",
-    "\n",
-    "3. Nuanced Output\n",
-    "   - Enhanced punctuation handling including emphatic marks\n",
-    "   - Better preservation of emotional context through punctuation\n",
-    "   - Improved potential for downstream tasks like sentiment analysis\n",
-    "\n",
-    "These differences make Whisper particularly suitable for applications requiring:\n",
-    "- High transcription accuracy\n",
-    "- Preservation of emotional context\n",
-    "- Integration with sentiment analysis pipelines\n",
-    "- Real-time or near-real-time processing"
    ]
   }
  ],
