put intro text to README

--- a/speech_to_text.ipynb
+++ b/speech_to_text.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Speech to Text\n",
-    "\n",
-    "Compare performance for two [HuggingFace](https://huggingface.co/docs) models:\n",
-    "- [Wav2Vec2](https://huggingface.co/docs/transformers/model_doc/wav2vec2)\n",
-    "- [Whisper](https://huggingface.co/openai/whisper-tiny.en)"
+    "# Speech to Text"
    ]
   },
   {
